--- a/coffea-casa-template.ipynb
+++ b/coffea-casa-template.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Table of Contents\n",
+    "- [Introduction](#Introduction)\n",
+    "- [Loading Files](#Loading-Files)\n",
+    "- [The Processor Class](#The-Processor-Class)\n",
+    "    - [Specifications](#Specifications)\n",
+    "    - [Minimal Processor](#Minimal-Processor)\n",
+    "- [The Dask Executor](#The-Dask-Executor)\n",
+    "    - [Scheduler Setup](#Scheduler-Setup)\n",
+    "    - [Running the Analysis](#Running-the-Analysis)\n",
+    "- [Miscellaneous](#Miscellaneous)\n",
+    "    - [JaggedCandidateArrays vs. NanoEvents](#JaggedCandidateArrays-vs.-NanoEvents)\n",
+    "    - [ServiceX](#ServiceX)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Introduction\n",
     "This is a template file to elucidate the structure of a typical analysis notebook on coffe-casa. We will load in a sample file, create a minimal processor class, and run the Dask executor."
    ]
@@ -22,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading in a file.\n",
+    "## Loading Files\n",
     "\n",
     "A dataset is parsed as a dictionary where each key is a dataset name, and each value is a list of files in that dataset. You can have multiple datasets (multiple keys), and you can have multiple files in a dataset (multiple pointers in the list). Typically, CMS files will require authentication, but coffea-casa does away with this by implementation of tokens. In order to bypass authentication, replace the redirector portion of your file with xcache; i.e., the file:\n",
     "\n",
@@ -46,9 +64,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a minimal processor class.\n",
+    "## The Processor Class\n",
     "\n",
-    "### Processor Specifications\n",
+    "### Specifications\n",
     "This part is pure [Coffea](https://coffeateam.github.io/coffea/reference.html). The processor class encapsulates all of our analysis. It is what we send to our executor, which forwards it to our workers. For detailed instructions on how to create the processor class, see the Coffea examples and documentation, or refer to the benchmarks and analysis in this repository. In short:\n",
     "\n",
     "`__init__`: This is where we define our histograms. Categorical or sparse axes (*Cats*) split data vertically, into different categories. Bin or dense axes (*Bins*) split data horizontally, into the 'bars' of the histogram. We also define an accumulator here. Data that is fed to the Processor is split into chunks, and we need to add all of these chunks together to get a histogram of **all** chunks. The accumulator is a tool that allows us to do this, by enabling easy object addition; i.e., \\[AwkwardArray1\\] + \\[AwkwardArray2\\] = \\[AwkwardArray1 + AwkwardArray2\\].\n",
@@ -100,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running the Dask executor.\n",
+    "## The Dask Executor\n",
     "\n",
     "### Scheduler Setup\n",
     "This is where [Dask](https://dask.org/) comes in. Now that we have a minimal processor put together, we can execute it on our sample file. This requires an executor. Coffea comes with basic executors such as `futures_executor` and `iterative_executor` which use strictly Pythonic tools. The Dask executor (`dask_executor`), however, is more sophisticated for cluster computing, and coffea-casa enables its usage.\n",
