--- a/coffea-casa-template.ipynb
+++ b/coffea-casa-template.ipynb
@@ -8,6 +8,7 @@
     "- [Introduction](#Introduction)\n",
     "- [Loading Files](#Loading-Files)\n",
     "- [The Processor Class](#The-Processor-Class)\n",
+    "    - [Skeleton](#Skeleton)\n",
     "    - [Specifications](#Specifications)\n",
     "    - [Minimal Processor](#Minimal-Processor)\n",
     "- [The Dask Executor](#The-Dask-Executor)\n",
@@ -64,8 +65,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Processor Class\n",
+    "## The Processor Class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Skeleton"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Processor(processor.ProcessorABC):\n",
+    "    def __init__(self):\n",
+    "        ''' Define histogram properties here. '''\n",
+    "    \n",
+    "    @property\n",
+    "    def accumulator(self):\n",
+    "        return self._accumulator\n",
+    "    \n",
+    "    def process(self, events):\n",
+    "        ''' Define analysis details here. '''\n",
+    "        return output\n",
     "\n",
+    "    def postprocess(self, accumulator):\n",
+    "        ''' Define weights, scaling, rebinning here.'''\n",
+    "        return accumulator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Specifications\n",
     "This part is pure [Coffea](https://coffeateam.github.io/coffea/reference.html). The processor class encapsulates all of our analysis. It is what we send to our executor, which forwards it to our workers. For detailed instructions on how to create the processor class, see the Coffea examples and documentation, or refer to the benchmarks and analysis in this repository. In short:\n",
     "\n",
