fixing some typos

--- a/coffea-casa-template.ipynb
+++ b/coffea-casa-template.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "This is a template file to elucidate the structure of a typical analysis notebook on coffe-casa. We will load in sa, create a minimal processor class, and run the Dask executor."
+    "This is a template file to elucidate the structure of a typical analysis notebook on coffe-casa. We will load in sample data, create a minimal processor class, and run the Dask executor."
    ]
   },
   {
@@ -125,7 +125,7 @@
     "`postprocess`: This is where we can make post-analysis adjustments, such as rebinning or scaling our histograms.\n",
     "\n",
     "### Minimal Processor\n",
-    "We'll just plot the MET of our sample datasets. MET is an event-level property, so there is no jaggedness involved here, which makes things a little more simple."
+    "We'll just plot the MET of our sample datasets. MET is an event-level property, so our arrays are flat and not jagged, which makes things a little more simple."
    ]
   },
   {
