remove uproot lines

--- a/analysis/analysis_tutorial.ipynb
+++ b/analysis/analysis_tutorial.ipynb
@@ -35,19 +35,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<JaggedArray [[] [84.48751 27.30925] [89.66919 9.768386 6.686062] [72.566124 37.084137] []] at 0x7f242c1bce80>,\n",
+       " array([84.48751 , 27.30925 , 89.66919 ,  9.768386,  6.686062, 72.566124,\n",
+       "        37.084137], dtype=float32),\n",
+       " array([0, 0, 2, 5, 7]),\n",
+       " array([0, 0, 2, 5, 7]),\n",
+       " array([0, 2, 5, 7, 7]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import uproot\n",
-    "a = uproot.open('root://hcc-stash.unl.edu:1094//osgconnect/public/dweitzel/coffea-casa/38E83594-51BD-7D46-B96D-620DD60078A7.root')"
+    "a = uproot.open('root://hcc-stash.unl.edu:1094//osgconnect/public/dweitzel/coffea-casa/38E83594-51BD-7D46-B96D-620DD60078A7.root')\n",
+    "events.Electron.pt[0:5], events.Electron.pt.content[0:7], events.Electron.pt.offsets[0:5], events.Electron.pt.starts[0:5], events.Electron.pt.stops[0:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.8/site-packages/coffea/util.py:98: Awkward0Warning: In coffea version 0.7 (target date: January 2021), this will be an error.\n",
+      "(Set awkward1.deprecations_as_errors = True to get a stack trace now.)\n",
+      "TypeError: <class 'coffea.nanoaod.nanoevents.NanoEvents'> relies exclusively on awkward 0.x and will be removed in upcoming versions of coffea!\n",
+      "  warnings.warn(message, Awkward0Warning)\n",
+      "/opt/conda/lib/python3.8/site-packages/coffea/util.py:98: Awkward0Warning: In coffea version 0.7 (target date: January 2021), this will be an error.\n",
+      "(Set awkward1.deprecations_as_errors = True to get a stack trace now.)\n",
+      "TypeError: <class 'coffea.nanoaod.nanoevents.NanoCollection'> relies exclusively on awkward 0.x and will be removed in upcoming versions of coffea!\n",
+      "  warnings.warn(message, Awkward0Warning)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import awkward as ak\n",
@@ -68,9 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<event 0> <event 1> <event 2> ... <event 99997> <event 99998> <event 99999>]\n",
+      "\n",
+      "\n",
+      "['fixedGridRhoFastjetCentralChargedPileUp', 'OtherPV', 'SoftActivityJetHT2', 'LHEPdfWeight', 'Electron', 'CorrT1METJet', 'SoftActivityJetHT10', 'fixedGridRhoFastjetCentralCalo', 'SoftActivityJet', 'LHEWeight', 'genWeight', 'RawMET', 'fixedGridRhoFastjetCentralNeutral', 'HLT', 'SoftActivityJetNjets5', 'SoftActivityJetNjets2', 'LHE', 'genTtbarId', 'SubJet', 'CaloMET', 'GenJet', 'Muon', 'HTXS', 'SoftActivityJetHT', 'GenVisTau', 'HLTriggerFirstPath', 'SoftActivityJetNjets10', 'MET', 'PSWeight', 'fixedGridRhoFastjetAll', 'event', 'SoftActivityJetHT5', 'FatJet', 'SV', 'btagWeight', 'L1', 'TrigObj', 'Generator', 'Tau', 'fixedGridRhoFastjetCentral', 'L1PreFiringWeight', 'Pileup', 'LHEPart', 'GenMET', 'run', 'GenPart', 'Flag', 'GenDressedLepton', 'Jet', 'SubGenJetAK8', 'PV', 'LHEReweightingWeight', 'HLTriggerFinalPath', 'PuppiMET', 'TkMET', 'GenJetAK8', 'luminosityBlock', 'L1simulation', 'IsoTrack', 'Photon', 'ChsMET', 'LHEScaleWeight']\n"
+     ]
+    }
+   ],
    "source": [
     "print(events)\n",
     "print('\\n')\n",
