--- a/coffea-casa-template.ipynb
+++ b/coffea-casa-template.ipynb
@@ -34,7 +34,8 @@
    "outputs": [],
    "source": [
     "import coffea\n",
-    "import coffea.processor as processor"
+    "import coffea.processor as processor\n",
+    "from coffea import hist"
    ]
   },
   {
