Misc cleanup and rerun all tutorials/examples on coffea-casa

--- a/analyses/topcoffea/topcoffea.ipynb
+++ b/analyses/topcoffea/topcoffea.ipynb
@@ -10,9 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'topcoffea.modules'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3b5974179c2f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'..'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtopcoffea\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodules\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msamples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtopcoffea\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodules\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfileReader\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGetFiles\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGetAllInfoFromFile\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'topcoffea.modules'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import time\n",
@@ -35,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,36 +578,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'DYJetsToLL_MLL50': ['root://xcache//store/user/jrgonzal/nanoAODttH/8F38C0F2-E7A7-C846-BBF5-0C040E6BA839.root'],\n",
-       " 'DYJetsToLL_M_10to50': ['root://xcache//store/user/jrgonzal/nanoAODttH/8F38C0F2-E7A7-C846-BBF5-0C040E6BA839.root'],\n",
-       " 'ZZTo2L2Nu': ['root://xcache//store/user/jrgonzal/nanoAODttH/8F38C0F2-E7A7-C846-BBF5-0C040E6BA839.root'],\n",
-       " 'ZZTo4L': ['root://xcache//store/user/jrgonzal/nanoAODttH/8F38C0F2-E7A7-C846-BBF5-0C040E6BA839.root'],\n",
-       " 'WZTo3LNU': ['root://xcache//store/user/jrgonzal/nanoAODttH/8F38C0F2-E7A7-C846-BBF5-0C040E6BA839.root'],\n",
-       " 'WWTo2L2Nu': ['root://xcache//store/user/jrgonzal/nanoAODttH/8F38C0F2-E7A7-C846-BBF5-0C040E6BA839.root'],\n",
-       " 'tW_noFullHad': ['root://xcache//store/user/jrgonzal/nanoAODttH/8F38C0F2-E7A7-C846-BBF5-0C040E6BA839.root'],\n",
-       " 'tbarW_noFullHad': ['root://xcache//store/user/jrgonzal/nanoAODttH/8F38C0F2-E7A7-C846-BBF5-0C040E6BA839.root'],\n",
-       " 'TT': ['root://xcache//store/user/jrgonzal/nanoAODttH/8F38C0F2-E7A7-C846-BBF5-0C040E6BA839.root'],\n",
-       " 'TTsemilep': ['root://xcache//store/user/jrgonzal/nanoAODttH/8F38C0F2-E7A7-C846-BBF5-0C040E6BA839.root']}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "flist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,66 +597,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17f7bd0d18574f5db73816c11c263d6f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Preprocessing'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8146a7ae96f64bb3b9711c16e296c9fc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Processing'), FloatProgress(value=0.0, max=10.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/coffea/util.py:98: Awkward0Warning: In coffea version 0.7 (target date: January 2021), this will be an error.\n",
-      "(Set awkward1.deprecations_as_errors = True to get a stack trace now.)\n",
-      "TypeError: <class 'coffea.nanoaod.nanoevents.NanoEvents'> relies exclusively on awkward 0.x and will be removed in upcoming versions of coffea!\n",
-      "  warnings.warn(message, Awkward0Warning)\n",
-      "/opt/conda/lib/python3.8/site-packages/coffea/util.py:98: Awkward0Warning: In coffea version 0.7 (target date: January 2021), this will be an error.\n",
-      "(Set awkward1.deprecations_as_errors = True to get a stack trace now.)\n",
-      "TypeError: <class 'coffea.nanoaod.nanoevents.NanoCollection'> relies exclusively on awkward 0.x and will be removed in upcoming versions of coffea!\n",
-      "  warnings.warn(message, Awkward0Warning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tstart = time.time()\n",
     "output = processor.run_uproot_job(flist, \n",
@@ -677,20 +612,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filled 161460 bins, nonzero bins: 74.3 %\n",
-      "Processing time: 3911.25 s with 10 workers (39112.51 s cpu overall)\n",
-      "Saving output in histos/plotsTopEFT.pkl.gz...\n",
-      "Done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dt = time.time() - tstart\n",
     "\n",
@@ -708,35 +632,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'SumOfEFTweights': <HistEFT (sample,SumOfEFTweights) instance at 0x7ffadb6b1ca0>,\n",
-       " 'dummy': <Hist (sample,dummy) instance at 0x7ffadbe1de80>,\n",
-       " 'counts': <Hist (sample,channel,cut,counts) instance at 0x7ffadbe36ca0>,\n",
-       " 'invmass': <Hist (sample,channel,cut,invmass) instance at 0x7ffadbfcc1c0>,\n",
-       " 'njets': <HistEFT (sample,channel,cut,njets) instance at 0x7ffadbfcc070>,\n",
-       " 'nbtags': <HistEFT (sample,channel,cut,nbtags) instance at 0x7ffadbfcc4f0>,\n",
-       " 'met': <HistEFT (sample,channel,cut,met) instance at 0x7ffadbfcc790>,\n",
-       " 'm3l': <HistEFT (sample,channel,cut,m3l) instance at 0x7ffadbe36a30>,\n",
-       " 'wleppt': <HistEFT (sample,channel,cut,wleppt) instance at 0x7ffadc133e80>,\n",
-       " 'e0pt': <HistEFT (sample,channel,cut,e0pt) instance at 0x7ffadbe369a0>,\n",
-       " 'm0pt': <HistEFT (sample,channel,cut,m0pt) instance at 0x7ffadbe361c0>,\n",
-       " 'j0pt': <HistEFT (sample,channel,cut,j0pt) instance at 0x7ffadc15e130>,\n",
-       " 'e0eta': <HistEFT (sample,channel,cut,e0eta) instance at 0x7ffadbe36400>,\n",
-       " 'm0eta': <HistEFT (sample,channel,cut,m0eta) instance at 0x7ffadc143160>,\n",
-       " 'j0eta': <HistEFT (sample,channel,cut,j0eta) instance at 0x7ffadecd0d30>,\n",
-       " 'ht': <HistEFT (sample,channel,cut,ht) instance at 0x7ffadecd0be0>}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "output"
    ]
