--- a/analyses/thq/analysis-local.ipynb
+++ b/analyses/thq/analysis-local.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,12 +717,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e5713694fbe40d5bd358d58978ffa66",
+       "model_id": "b006b4cb1fe742cc9af6583e3025ea3b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Preprocessing', max=119.0, style=ProgressStyle(descriptio…"
+       "HBox(children=(HTML(value='Preprocessing'), FloatProgress(value=0.0, max=119.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -733,6 +733,14 @@
      "output_type": "stream",
      "text": [
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Received SIGINT, killed pending jobs.  Running jobs will continue to completion.\n",
+      "Running jobs: 9\n"
      ]
     }
    ],
@@ -1037,7 +1045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
