changing pop() to pop(0) for quality of life

--- a/analyses/thq/benchmarking/analysis-casa-benchmarking.ipynb
+++ b/analyses/thq/benchmarking/analysis-casa-benchmarking.ipynb
@@ -1102,7 +1102,7 @@
     "\n",
     "while (len(multiplies) == len(jobs)) and (len(jobs) == len(chunksizes)) and (len(multiplies) > 0):\n",
     "    # Fileset blow-up is handled here.\n",
-    "    multiply = multiplies.pop()\n",
+    "    multiply = multiplies.pop(0)\n",
     "    results['multiply'].append(multiply)\n",
     "    files = fileset.copy()\n",
     "    keys = fileset.copy().keys()\n",
@@ -1113,11 +1113,11 @@
     "    \n",
     "    # Cluster configuration is handled here.\n",
     "    cluster = CoffeaCasaCluster()\n",
-    "    njobs = jobs.pop()\n",
+    "    njobs = jobs.pop(0)\n",
     "    results['workers'].append(njobs)\n",
     "    cluster.scale(jobs=njobs)\n",
     "    client = Client(cluster)\n",
-    "    chunksize = chunksizes.pop()\n",
+    "    chunksize = chunksizes.pop(0)\n",
     "    results['chunksize'].append(chunksize)\n",
     "\n",
     "    exe_args = {\n",
