update to 0.7 - need verification and dask execution

--- a/examples/example8.ipynb
+++ b/examples/example8.ipynb
@@ -18,37 +18,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This is a helper function which adds muon (0) and electron (1) identifiers to a stacked lepton JaggedArray.\n",
-    "def make_labeled_p4(x, indices, itype):\n",
-    "    p4 = TLorentzVectorArray.from_ptetaphim(x.pt, x.eta, x.phi, x.mass)\n",
-    "    return ak.JaggedArray.zip(p4=p4,\n",
-    "                              ptype=itype*x.pt.ones_like().astype(np.int),\n",
-    "                              flavor=indices,\n",
-    "                              charge=x.charge)\n",
-    "\n",
-    "# This generates a stacked lepton JaggedArray, allowing combination of both muons and electrons for computations across flavor.\n",
-    "def stack_leptons(muons, electrons):\n",
-    "    # Construct new lepton indices within every event array.\n",
-    "    muons_indices = ak.JaggedArray.fromoffsets(muons.pt.offsets, \n",
-    "                                             np.arange(0, muons.pt.content.size)) - muons.pt.offsets[:-1]\n",
-    "    electrons_indices = ak.JaggedArray.fromoffsets(electrons.pt.offsets, \n",
-    "                                             np.arange(0, electrons.pt.content.size)) - electrons.pt.offsets[:-1]\n",
-    "    # Assign 0/1 value depending on whether lepton is muon/electron.\n",
-    "    muons_p4 = make_labeled_p4(muons, muons_indices, 0)\n",
-    "    electrons_p4 = make_labeled_p4(electrons, electrons_indices, 1)\n",
-    "    # Concatenate leptons.\n",
-    "    stacked_p4 = ak.concatenate((muons_p4, electrons_p4), axis=1)\n",
-    "    \n",
-    "    return stacked_p4\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -85,26 +54,26 @@
     "        muons = muons[(muons.pt > 10) & (np.abs(muons.eta) < 2.4)]\n",
     "        electrons = electrons[(electrons.pt > 10) & (np.abs(electrons.eta) < 2.5)]\n",
     "\n",
-    "        leptons = stack_leptons(muons, electrons)\n",
+    "        leptons = ak.with_name(ak.concatenate([muons, electrons], axis=1), 'PtEtaPhiMCandidate')\n",
     "        \n",
     "        # Filter out events with less than 3 leptons.\n",
-    "        MET = MET[leptons.counts >= 3]\n",
-    "        trileptons = leptons[leptons.counts >= 3]\n",
+    "        MET = MET[ak.counts(leptons, axis=1) >= 3]\n",
+    "        trileptons = leptons[ak.counts(leptons, axis=1) >= 3]\n",
     "        \n",
     "        # Generate the indices of every pair; indices because we'll be removing these elements later.\n",
-    "        lepton_pairs = trileptons.argchoose(2)\n",
+    "        lepton_pairs = ak.argcombinations(trileptons, 2, fields=['i0', 'i1'])\n",
     "        \n",
     "        # Select pairs that are SFOS.\n",
-    "        SFOS_pairs = lepton_pairs[(trileptons[lepton_pairs.i0].flavor == trileptons[lepton_pairs.i1].flavor) & (trileptons[lepton_pairs.i0].charge != trileptons[lepton_pairs.i1].charge)]\n",
+    "        SFOS_pairs = lepton_pairs[(trileptons[lepton_pairs['i0']].flavor == trileptons[lepton_pairs['i1']].flavor) & (trileptons[lepton_pairs['i0']].charge != trileptons[lepton_pairs['i1']].charge)]\n",
     "        \n",
     "        # Find the pair with mass closest to Z.\n",
-    "        closest_pairs = SFOS_pairs[np.abs((trileptons[SFOS_pairs.i0].p4 + trileptons[SFOS_pairs.i1].p4).mass - 91.2).argmin()]\n",
+    "        closest_pairs = SFOS_pairs[ak.argmin(np.abs((trileptons[SFOS_pairs['i0']].p4 + trileptons[SFOS_pairs['i1']].p4).mass - 91.2))]\n",
     "        \n",
     "        # Remove elements of these pairs from leptons by negating the indices.\n",
     "        is_in_pair_mask = trileptons[~closest_pairs.i0 | ~closest_pairs.i1]\n",
     "        \n",
     "        # Find the highest-pt lepton out of the ones that remain.\n",
-    "        leading_lepton = trileptons[trileptons.p4.pt.argmax()]\n",
+    "        leading_lepton = trileptons[ak.argmax(trileptons.p4.pt)]\n",
     "        \n",
     "        # Can't cross MET with leading_lepton, but we need both phi and pt. So we build a crossable table.\n",
     "        MET_tab = ak.JaggedArray.fromcounts(np.ones_like(MET.pt, dtype=np.int), ak.Table({'phi': MET.phi, 'pt': MET.pt}))\n",
@@ -197,9 +166,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "coffea",
    "language": "python",
-   "name": "python3"
+   "name": "coffea"
   },
   "language_info": {
    "codemirror_mode": {
@@ -211,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
